--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -61,8 +61,8 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="#" onclick="logout()">로그아웃</a></li>
                     <li><a class="dropdown-item" href="/user/myInfo">나의 정보</a></li>
-                    <li><a class="dropdown-item" th:href="@{/cart/{id}(id=${#authentication.principal.user.id})}">장바구니</a></li>
-                    <li><a class="dropdown-item" th:href="@{/user/order/{id}(id=${#authentication.principal.user.id})}">주문 및 배송정보</a></li>
+                    <li><a class="dropdown-item" href="/user/cart">장바구니</a></li>
+                    <li><a class="dropdown-item" href="/user/order">주문 및 배송정보</a></li>
                 </ul>
             </div>
         </div>
