--- a/src/main/resources/templates/manager/order.html
+++ b/src/main/resources/templates/manager/order.html
@@ -95,8 +95,6 @@
                 const orderStatus = $(this).attr("data-status")
                 const chanageOrderStatus = $(this).val()
 
-                console.log("orderId : ", orderId, " orderStatus : ", orderStatus, " chanageOrderStatus : ", chanageOrderStatus)
-
                 const result = confirm("해당 상품의 주문상태값을 변경하시겠습니까?")
                 if(!result) $(`#orderStatus-${orderId}`).val(orderStatus)
                 else {
@@ -104,7 +102,7 @@
                     console.log('obj : ', obj)
                     $.ajax({
                         type: 'PUT',
-                        url: `/api/orderStatus/${orderId}`,
+                        url: `/api/order-status/${orderId}`,
                         dataType: 'json',
                         data: JSON.stringify(obj),
                         contentType: 'application/json',
