commit 112 - 상품 조회 화면에서 주문 및 장바구니 담기 로직 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -59,10 +59,18 @@
                     <img src="/assets/src/header/profile.png" alt="Button Image" style="width:40px;" class="rounded-pill">
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#" onclick="logout()">로그아웃</a></li>
-                    <li><a class="dropdown-item" href="/user/myInfo">나의 정보</a></li>
-                    <li><a class="dropdown-item" href="/user/cart">장바구니</a></li>
-                    <li><a class="dropdown-item" href="/user/order">주문 및 배송정보</a></li>
+                    <li><a class="dropdown-item" href="#" onclick="logout()">
+                        <i data-feather="log-out" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 로그아웃</a>
+                    </li>
+                    <li><a class="dropdown-item" href="/user/myInfo">
+                        <i data-feather="info" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 나의 정보</a>
+                    </li>
+                    <li><a class="dropdown-item" href="/user/cart">
+                        <i data-feather="shopping-cart" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 장바구니</a>
+                    </li>
+                    <li><a class="dropdown-item" href="/user/order">
+                        <i data-feather="inbox" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 주문 및 배송정보</a>
+                    </li>
                 </ul>
             </div>
         </div>
