--- a/src/main/resources/templates/cart/index.html
+++ b/src/main/resources/templates/cart/index.html
@@ -125,7 +125,7 @@
             else {
                 const queryString = '?ids=' + ids.join('&ids=');
                 const result = confirm("해당 상품들을 주문하시겠습니까?")
-                if(result) window.location.href = `/order${queryString}`
+                if(result) window.location.href = `/order/cart${queryString}`
             }
         })
 
