--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -139,6 +139,7 @@
                                     </div>
                                     <div class="col-md-12 col-12">
                                         <div class="mb-1">
+                                            <input type="hidden" name="hongProductId" id="hongProductId" />
                                             <label class="form-label" for="product-order-num">주문 개수<span class="text-primary ms-50">*</span></label>
                                             <div class="input_wrap">
                                                 <input type="number" class="form-control" id="product-order-num" name="product-order-num" min="1" required/>
@@ -150,7 +151,7 @@
                                 <div style="margin-top: 10px" class="text-end">
                                     <button type="button" class="btn btn-outline-secondary" id="close-productModal">닫기</button>
                                     <button type="submit" class="btn btn-outline-primary" id="into-purchase">🎁주문하기</button>
-                                    <button type="submit" class="btn btn-outline-success" id="into-chart">🛒장바구니담기</button>
+                                    <button type="submit" class="btn btn-outline-success" id="into-cart">🛒장바구니담기</button>
                                 </div>
                             </div>
                         </div>
@@ -219,6 +220,7 @@
             if(productStock == 0) $("#alertModal").modal('show')
             else {
                 const price = productPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',')
+                $("#hongProductId").val(productId)
                 $("#product-name").text(productName)                        // 상품 이름
                 $("#product-price").text(`가격: ${price} 원`)                // 상품 가격
                 $("#product-stock").text(`재고: ${productStock}`)            // 상품 재고
@@ -242,11 +244,34 @@
 
                     FormDataToObj.getParameter("product-purchase-form").then((obj) => {
                         console.log("obj : ", obj)
-                        /*
-                        * 주문하기 -> 주문 상세 화면으로 이동
-                        * 장바구니   -> 장바구니에 insert 후 장바구니 이동할 것인지 물어보고 화면 이동?
-                        *          -> 장바구니 담길 경우, 재고 변경 없음
-                        * */
+
+                        const submitButtonId = event.submitter.id;
+                        if(submitButtonId === 'into-cart') {
+
+                            const OBJ = {'hongProductId': obj['hongProductId'], 'cartCnt': obj['product-order-num']}
+                            $.ajax({
+                                type: 'POST',
+                                url: `/api/cart`,
+                                dataType: 'json',
+                                data: JSON.stringify(OBJ),
+                                contentType: 'application/json',
+                                success: function (data) {
+                                    if(data.httpStatus === 200) {
+                                        const result = confirm('해당 물품이 장바구니에 담겼습니다.' + '\n' + "장바구니를 보러가시겠습니까?")
+                                        if(result) window.location.href = '/user/cart'
+                                        else $("#product-purchase-modal").modal('hide')
+                                    }else {
+                                        alert("해당 물품을 장바구니에 담기에 실패했습니다.")
+                                    }
+                                },
+                                error: function (xhr, status, error) {
+                                    console.error('Error getting password:', error);
+                                }
+                            });
+
+                        } else if(submitButtonId === 'into-purchase') {
+                            window.location.href = `/order/shop?productId=${obj['hongProductId']}&orderNum=${obj['product-order-num']}`
+                        }
                     })
                 }
             })
