--- a/src/main/resources/templates/bbs/notice/index.html
+++ b/src/main/resources/templates/bbs/notice/index.html
@@ -6,6 +6,11 @@
 
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
+    <style>
+        th, tr, td {
+            text-align: center;
+        }
+    </style>
 </th:block>
 
 <th:block layout:fragment="content">
@@ -25,24 +30,24 @@
         <div class="card-body">
             <table class="table table-hover table-bordered" id="notice-table">
                 <thead>
-                    <tr style="text-align: center;">
-                        <th style="width: 10%;" class="text-center">번호</th>
+                    <tr>
+                        <th style="width: 10%;">번호</th>
                         <th style="width: 30%">제목</th>
-                        <th style="width: 10%" class="text-center">첨부파일</th>
-                        <th style="width: 10%" class="text-center">조회수</th>
+                        <th style="width: 10%">첨부파일</th>
+                        <th style="width: 10%">조회수</th>
                     </tr>
                 </thead>
                 <tbody id="notice-tbody">
                     <th:block th:if="${postList.size() > 0}">
                         <tr th:each="post, postStat : ${postList}" th:data-num="${post.regId}" th:data-value="${post.id}">
-                            <td style="width: 10%;" class="text-center" th:text="${postStat.index + 1}"></td>
-                            <td style="width: 50%" th:text="${post.title}"></td>
-                            <td style="width: 10%" class="text-center" th:text="${(post.file == null) ? 0 : post.file.fileList.size()}"></td>
-                            <td style="width: 10%" class="text-center" th:text="${post.readCnt}"></td>
+                            <td style="width: 10%;" th:text="${postStat.index + 1}"></td>
+                            <td style="width: 50%" class="text-start" th:text="${post.title}"></td>
+                            <td style="width: 10%" th:text="${(post.file == null) ? 0 : post.file.fileList.size()}"></td>
+                            <td style="width: 10%" th:text="${post.readCnt}"></td>
                         </tr>
                     </th:block>
                     <th:block th:unless="${postList.size() > 0}">
-                        <tr style="text-align: center;">
+                        <tr>
                             <td colspan="4">게시글이 비어있습니다.</td>
                         </tr>
                     </th:block>
