--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -32,12 +32,14 @@
                 <thead>
                     <tr>
                         <th style="width: 5%" rowspan="2">번호</th>
-                        <th style="width: 10%" rowspan="2">주문상태</th>
+                        <th style="width: 5%" rowspan="2">주문상태</th>
                         <th style="width: 10%" rowspan="2">주문날짜</th>
                         <th style="width: 10%" COLSPAN="3">주문상세정보</th>
-                        <th style="width: 10%" rowspan="2">배송상태</th>
+                        <th style="width: 10%" rowspan="2">전체 가격</th>
+                        <th style="width: 1%" rowspan="2"></th>
+                        <th style="width: 5%" rowspan="2">배송상태</th>
                         <th style="width: 10%" COLSPAN="3">주소</th>
-                        <th style="width: 10%" rowspan="2">배송지 <br/> 변경하기</th>
+                        <th style="width: 5%" rowspan="2">배송지 <br/> 변경하기</th>
                     </tr>
                     <tr>
                         <th>상품명</th>
@@ -58,16 +60,20 @@
                     <th:block  th:each="order, orderStat : ${orders}">
                         <tr>
                             <td th:text="${orderStat.index + 1}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.orderStatStr}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.orderStatStr}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
                             <td th:text="${#strings.substring(order.orderDate, 0, 10)}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
                             <td th:text="${order.orderDetails.get(0).productName}" style="width: 10%"></td>
-                            <td th:text="|${order.orderDetails.get(0).orderCnt} 개|" style="width: 10%"></td>
+                            <td th:text="|${order.orderDetails.get(0).orderCnt} 개|" style="width: 5%"></td>
                             <td th:text="|${#numbers.formatInteger(order.orderDetails.get(0).orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
-                            <td th:text="${order.deliverStatStr}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.address.city}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.address.street}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.address.zipcode}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
                             <td style="width: 10%" th:rowspan="${order.orderDetails.size()}">
+                                <b th:text="|${#numbers.formatInteger(totalPrice.get(orderStat.index), 0, 'COMMA')} 원|"></b>
+                            </td>
+                            <td style="width: 1%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.deliverStatStr}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.address.city}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.address.street}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td th:text="${order.address.zipcode}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
+                            <td style="width: 5%" th:rowspan="${order.orderDetails.size()}">
                                 <button type="button" class="btn btn-outline-primary chg-address" th:data-deliver="${order.deliverId}" th:data-city="${order.address.city}" th:data-status="${order.deliverStatus}"
                                         th:data-street="${order.address.street}" th:data-zipcode="${order.address.zipcode}">변경</button>
                             </td>
@@ -77,7 +83,7 @@
                                 <th:block th:unless="${detailStat.first}">
                                     <tr>
                                         <td th:text="${detail.productName}" style="width: 10%"></td>
-                                        <td th:text="|${detail.orderCnt} 개|" style="width: 10%"></td>
+                                        <td th:text="|${detail.orderCnt} 개|" style="width: 5%"></td>
                                         <td th:text="|${#numbers.formatInteger(detail.orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
                                     </tr>
                                 </th:block>
@@ -153,6 +159,8 @@
     <script th:inline="javascript">
         const orderAndDeliver = /*[[${orders}]]*/ [];
         const id = /*[[${id}]]*/ null;
+        const totalPrice = /*[[${totalPrice}]]*/[];
+        console.log("totalPrice : ", totalPrice)
 
         /* 주소 수정 모달창 닫기 */
         $("#close-addressChangeModal, #close-change-address-modal-btn").on("click", function(e) {
