commit 116 : error 화면용 css 생성 및 적용

--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -9,17 +9,11 @@
 
 <th:block layout:fragment="content">
     <div class="mt-3">
-        <div class="text-center">
+        <div class="container-error">
             <img src="/assets/src/error/400.png">
-        </div>
-        <div class="text-center">
             <h3><b>400에러</b></h3>
             <span>유효하지 않은 요청입니다.</span>
-        </div>
-        <div class="text-center">
             <span>서버가 클라이언트 오류를 감지해 요청을 처리할 수 없습니다.</span>
-        </div>
-        <div class="text-center" style="margin-top: 10px">
             <button type="button" class="btn btn-sm btn-danger" onclick="location.href='/'">홈으로 돌아가기</button>
         </div>
     </div>
