--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -9,15 +9,11 @@
 
 <th:block layout:fragment="content">
     <div class="mt-3">
-        <div class="text-center">
+        <div class="container-error">
             <img src="/assets/src/error/403.png">
-        </div>
-        <div class="text-center">
             <h3><b>403에러</b></h3>
             <span>접근권한이 없는 페이지입니다. 관리자에게 문의바랍니다.</span>
-        </div>
-        <div class="text-center" style="margin-top: 10px">
-            <button type="button" class="btn btn-sm btn-danger" onclick="location.href='/'" style="margin-top: 10px">홈으로 돌아가기</button>
+            <button type="button" class="btn btn-sm btn-danger" onclick="location.href='/'">홈으로 돌아가기</button>
         </div>
     </div>
 </th:block>
