--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -9,14 +9,10 @@
 
 <th:block layout:fragment="content">
     <div class="mt-3">
-        <div class="text-center">
+        <div class="container-error">
             <img src="/assets/src/error/404.png">
-        </div>
-        <div class="text-center">
             <h3><b>404에러</b></h3>
             <span>해당 페이지는 없는 페이지입니다.</span>
-        </div>
-        <div class="text-center" style="margin-top: 10px">
             <button type="button" class="btn btn-sm btn-danger" onclick="location.href='/'">홈으로 돌아가기</button>
         </div>
     </div>
