--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -9,17 +9,11 @@
 
 <th:block layout:fragment="content">
     <div class="mt-3">
-        <div class="text-center">
+        <div class="container-error">
             <img src="/assets/src/error/500.png">
-        </div>
-        <div class="text-center">
             <h3><b>500에러</b></h3>
             <span>내부적인 오류입니다.</span>
-        </div>
-        <div class="text-center">
             <span>죄송합니다. 관리자에게 문의바랍니다.</span>
-        </div>
-        <div class="text-center" style="margin-top: 10px">
             <button type="button" class="btn btn-sm btn-danger" onclick="location.href='/'">홈으로 돌아가기</button>
         </div>
     </div>
